# PointCloudBuilder

./: .gitignore  FFS_REPRODUCTION_AND_INTEGRATION_REPORT.md  README.md  README_zh-CN.md  pyproject.toml
.github/workflows/: test.yml
configs/: example_deploy_voxel_fps.yaml  example_head_aligned.yaml  example_head_depth_raw.yaml  example_train_voxel_random.yaml
configs/captures/: head_aligned.yaml
examples/: export_zarr_example.py  live_frame_example.py  recorded_frame_example.py
ffs_reproduction/: README.md  README_zh-CN.md  THIRD_PARTY_NOTICES.md  UPSTREAM_SOURCE.json
ffs_reproduction/builders/: __init__.py  trt_builder.py
ffs_reproduction/configs/: parity_thresholds.yaml  v05_ffs.yaml
ffs_reproduction/cpp/: CMakeLists.txt
ffs_reproduction/exporters/: __init__.py  onnx_export.py
pointcloud_builder/: __init__.py  benchmark.py  builder.py  camera_model.py  config.py  crop.py  deprojection.py  frame_io.py  sampling.py  types.py  utils.py  visualization.py
pointcloud_builder/ffs/: __init__.py  calibration.py  estimator.py  factory.py  geometry.py  manifest.py  preprocessing.py  pytorch_backend.py  tensorrt_common.py  tensorrt_plugin_backend.py  tensorrt_single_backend.py  tensorrt_two_stage_backend.py  types.py  vendor_loader.py
scripts/: benchmark_crop.py  benchmark_deprojection.py  benchmark_ffs_backends.py  benchmark_full_pipeline.py  benchmark_sampling.py  build_ffs_plugin.py  compare_ffs_backends.py  prepare_ffs_artifacts.py  run_all_tests.py  run_ffs_stereo_frame.py  run_v05_ffs_frame.py  view_pointcloud_triplet.py  visualize_cropped_pointcloud.py  visualize_ffs_stereo_pipeline.py  visualize_raw_pointcloud.py  visualize_sampled_pointcloud.py
tests/: test_builder.py  test_config.py  test_crop.py  test_deprojection.py  test_depth_source_config.py  test_empty_crop_no_crash.py  test_ffs_backend_contract.py  test_ffs_builder_integration.py  test_ffs_geometry.py  test_ffs_visualization_cli.py  test_fixed_num_points.py  test_import.py  test_onnx_export_contract.py  test_sampling.py
tools/camera/: capture_d435i_aligned_rgbd.py  detect_realsense.py
